--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
-<script type="text/javascript" src="http://ff.kis.v2.scr.kaspersky-labs.com/131B3452-5277-EC49-B086-9DB65C61DB38/main.js" charset="UTF-8"></script></head>
+</head>
 <body style="background-color: #666666;">
 	
 	<div class="limiter">
